# doc-examples

cpi/: Anchor.toml
cpi-invoke/: Anchor.toml
cpi-invoke-signed/: Anchor.toml
cpi-invoke-signed/programs/cpi-invoke-signed/: Cargo.toml
cpi-invoke/programs/cpi-invoke/: Cargo.toml
cpi-pda/: Anchor.toml
cpi-pda/programs/cpi-pda/: Cargo.toml
cpi-pda/programs/cpi-pda/src/: lib.rs
cpi-pda/tests/: cpi-pda.ts
cpi-sol-transfer/: Anchor.toml
cpi-sol-transfer-pda-signer/: Anchor.toml
cpi-sol-transfer-pda-signer/programs/cpi/: Cargo.toml
cpi-sol-transfer-pda-signer/programs/cpi/src/: lib.rs
cpi-sol-transfer/programs/cpi/src/: lib.rs
cpi-sol-transfer/tests/: cpi.ts
cpi/programs/cpi/src/: lib.rs
cpi/tests/: cpi.ts
pda-account/: Anchor.toml
pda-account/programs/pda-account/: Cargo.toml
pda-account/programs/pda-account/src/: lib.rs
pda-account/tests/: pda-account.ts
